<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/Background"
                                                   app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
            android:text="@string/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/welcome_text"
            android:textColor="#E91E63" android:textSize="20sp"
            android:textStyle="bold" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.189"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/capriola"/>
    <TextView
            android:text="@string/check_results_text"
            android:layout_width="297dp"
            android:layout_height="40dp" android:id="@+id/results_check_text"
            android:textColor="#FFFFFF" android:fontFamily="@font/capriola"
            android:textSize="15sp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="412dp" app:layout_constraintTop_toBottomOf="@+id/welcome_text"
            app:layout_constraintVertical_bias="0.411" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textAlignment="center"/>
    <TextView
            android:text="@string/enter_register_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/reg_num"
            android:textColor="#00BCD4" android:textSize="18sp"
            android:fontFamily="@font/capriola" app:layout_constraintTop_toBottomOf="@+id/results_check_text"
            android:layout_marginTop="76dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.007" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.279"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/reg_num_enter"
            app:layout_constraintTop_toBottomOf="@+id/reg_num" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.026" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.306"
            android:backgroundTint="#FFFFFF"
            android:importantForAutofill="no" android:fontFamily="sans-serif"
            android:hint="@string/register_number" android:textColor="#FFFFFF" android:textColorHint="#FFFFFF"
            tools:targetApi="lollipop"/>
    <Button
            android:text="@string/submit"
            android:layout_width="121dp"
            android:layout_height="57dp" android:id="@+id/submit3"
            android:textColor="#E91E63" android:fontFamily="@font/capriola"
            android:textSize="20sp" android:textStyle="bold" app:layout_constraintTop_toBottomOf="@+id/reg_num_enter"
            android:layout_marginTop="84dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" android:background="@color/colorAccent"/>
</androidx.constraintlayout.widget.ConstraintLayout>