<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/Background">

    <TextView
            android:text="@string/results_portal"
            android:layout_width="302dp"
            android:layout_height="114dp" android:id="@+id/header_text"
            android:fontFamily="@font/capriola" android:textSize="40sp"
            android:textStyle="bold" android:textColor="#E91E63" android:textAllCaps="true"
            android:textAlignment="center" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintVertical_bias="0.207"/>
    <Button
            android:layout_width="146dp"
            android:layout_height="55dp" android:id="@+id/student_button"
            app:layout_constraintTop_toBottomOf="@+id/header_text"
            android:layout_marginTop="108dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.492" app:layout_constraintVertical_bias="0.0"
            android:textColor="#E91E63" android:text="@string/login_as_student"
            android:background="@color/colorAccent"/>
    <Button
            android:text="@string/login_as_faculty"
            android:layout_width="149dp"
            android:layout_height="58dp" android:id="@+id/faculty_button"
            app:layout_constraintTop_toBottomOf="@+id/student_button"
            android:layout_marginTop="80dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.496" app:layout_constraintVertical_bias="0.0"
            android:textColor="#E91E63" android:background="@color/colorAccent"/>
</androidx.constraintlayout.widget.ConstraintLayout>